@@ -5,10 +5,10 @@
 package edu.tigers.sumatra.math.quadrilateral;
 
 import com.sleepycat.persist.model.Persistent;
-import edu.tigers.sumatra.math.line.ILine;
-import edu.tigers.sumatra.math.line.Line;
-import edu.tigers.sumatra.math.line.v2.ILineSegment;
-import edu.tigers.sumatra.math.line.v2.Lines;
+import edu.tigers.sumatra.math.IBoundedPath;
+import edu.tigers.sumatra.math.line.ILineSegment;
+import edu.tigers.sumatra.math.line.Lines;
+import edu.tigers.sumatra.math.polygon.PolygonBuilder;
 import edu.tigers.sumatra.math.triangle.ITriangle;
 import edu.tigers.sumatra.math.triangle.Triangle;
 import edu.tigers.sumatra.math.vector.IVector2;
@@ -20,9 +20,8 @@ import org.apache.commons.lang.Validate;
 
 import java.util.ArrayList;
 import java.util.Collections;
+import java.util.Comparator;
 import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
 
 
 /**
@@ -68,7 +67,8 @@ public final class Quadrilateral implements IQuadrilateral
 				.map(v -> v.subtractNew(center))
 				.sorted(new VectorAngleComparator())
 				.map(v -> v.addNew(center))
-				.collect(Collectors.toList());
+				.map(IVector2.class::cast)
+				.toList();
 		return new Quadrilateral(sortedCorners);
 	}
 
@@ -130,13 +130,6 @@ public final class Quadrilateral implements IQuadrilateral
 
 
 	@Override
-	public boolean isPointInShape(final IVector2 point, final double margin)
-	{
-		return getTriangles().stream().anyMatch(t -> t.isPointInShape(point, margin));
-	}
-
-
-	@Override
 	public List<ITriangle> getTriangles()
 	{
 		List<ITriangle> triangles = new ArrayList<>(2);
@@ -147,35 +140,43 @@ public final class Quadrilateral implements IQuadrilateral
 
 
 	@Override
-	public List<ILine> getEdges()
+	public IQuadrilateral withMargin(double margin)
 	{
-		List<ILine> edges = new ArrayList<>(4);
+		var builder = new PolygonBuilder();
+		getCorners().forEach(builder::addPoint);
+		return new Quadrilateral(builder.build().withMargin(margin).getPoints());
+	}
+
+
+	@Override
+	public List<ILineSegment> getEdges()
+	{
+		List<ILineSegment> edges = new ArrayList<>(4);
 		for (int i = 0; i < 4; i++)
 		{
-			edges.add(Line.fromPoints(corners.get(i), corners.get((i + 1) % 4)));
+			edges.add(Lines.segmentFromPoints(corners.get(i), corners.get((i + 1) % 4)));
 		}
 		return edges;
 	}
 
 
 	@Override
-	public List<IVector2> lineIntersections(final ILine line)
+	public List<IBoundedPath> getPerimeterPath()
 	{
-		IVector2 a = corners.get(0);
-		IVector2 b = corners.get(1);
-		IVector2 c = corners.get(2);
-		IVector2 d = corners.get(3);
-		ILineSegment ab = Lines.segmentFromPoints(a, b);
-		ILineSegment bc = Lines.segmentFromPoints(b, c);
-		ILineSegment cd = Lines.segmentFromPoints(c, d);
-		ILineSegment da = Lines.segmentFromPoints(d, a);
-		ILineSegment[] lines = new ILineSegment[] { ab, bc, cd, da };
-		List<IVector2> intersections = new ArrayList<>();
-		for (ILineSegment segment : lines)
+		return getEdges().stream().map(IBoundedPath.class::cast).toList();
+	}
+
+
+	@Override
+	public IVector2 nearestPointInside(IVector2 point)
+	{
+		if (isPointInShape(point))
 		{
-			Optional<IVector2> intersection = segment.intersectLine(Lines.lineFromLegacyLine(line));
-			intersection.ifPresent(intersections::add);
+			return point;
 		}
-		return intersections;
+		return getEdges().stream()
+				.map(e -> e.closestPointOnPath(point))
+				.min(Comparator.comparingDouble(point::distanceTo))
+				.orElseThrow();
 	}
 }
