@@ -4,28 +4,22 @@
 
 package edu.tigers.sumatra.math.rectangle;
 
+import com.sleepycat.persist.model.Persistent;
+import edu.tigers.sumatra.math.IBoundedPath;
+import edu.tigers.sumatra.math.SumatraMath;
+import edu.tigers.sumatra.math.circle.ICircle;
+import edu.tigers.sumatra.math.line.ILineSegment;
+import edu.tigers.sumatra.math.line.Lines;
+import edu.tigers.sumatra.math.vector.IVector2;
+import edu.tigers.sumatra.math.vector.Vector2;
+import edu.tigers.sumatra.math.vector.Vector2f;
+import org.json.simple.JSONObject;
+
 import java.util.ArrayList;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.Optional;
 import java.util.Random;
-import java.util.stream.Collectors;
-
-import edu.tigers.sumatra.math.line.v2.IHalfLine;
-import edu.tigers.sumatra.math.line.v2.ILineSegment;
-import edu.tigers.sumatra.math.line.v2.Lines;
-import org.json.simple.JSONObject;
-
-import com.sleepycat.persist.model.Persistent;
-
-import edu.tigers.sumatra.math.SumatraMath;
-import edu.tigers.sumatra.math.circle.ICircle;
-import edu.tigers.sumatra.math.line.ILine;
-import edu.tigers.sumatra.math.line.Line;
-import edu.tigers.sumatra.math.vector.IVector2;
-import edu.tigers.sumatra.math.vector.Vector2;
-import edu.tigers.sumatra.math.vector.Vector2f;
 
 
 /**
@@ -91,16 +85,6 @@ abstract class ARectangle implements IRectangle
 
 
 	@Override
-	public boolean isPointInShape(final IVector2 point, final double margin)
-	{
-		IVector2 relPoint = point.subtractNew(center());
-		double xw = xExtent() / 2.0 + margin;
-		double yw = yExtent() / 2.0 + margin;
-		return relPoint.x() >= -xw && relPoint.x() <= xw && relPoint.y() >= -yw && relPoint.y() <= yw;
-	}
-
-
-	@Override
 	public boolean isPointInShape(final IVector2 point)
 	{
 		IVector2 relPoint = point.subtractNew(center());
@@ -161,7 +145,58 @@ abstract class ARectangle implements IRectangle
 
 
 	@Override
-	public IVector2 nearestPointInside(final IVector2 point)
+	public IVector2 nearestPointOnPerimeterPath(final IVector2 point)
+	{
+		double x;
+		boolean onXEdge;
+		if (point.x() < minX())
+		{
+			x = minX();
+			onXEdge = true;
+		} else if (point.x() > maxX())
+		{
+			onXEdge = true;
+			x = maxX();
+		} else
+		{
+			x = point.x();
+			onXEdge = false;
+		}
+
+		double y;
+		boolean onYEdge;
+		if (point.y() > maxY())
+		{
+			onYEdge = true;
+			y = maxY();
+		} else if (point.y() < minY())
+		{
+			onYEdge = true;
+			y = minY();
+		} else
+		{
+			y = point.y();
+			onYEdge = false;
+		}
+
+		if (!onXEdge && !onYEdge)
+		{
+			var distX = point.x() < center().x() ? minX() - point.x() : maxX() - point.x();
+			var distY = point.y() < center().y() ? minY() - point.y() : maxY() - point.y();
+			if (Math.abs(distX) <= Math.abs(distY))
+			{
+				x += distX;
+			} else
+			{
+				y += distY;
+			}
+		}
+		return Vector2f.fromXY(x, y);
+	}
+
+
+	@Override
+	public IVector2 nearestPointInside(IVector2 point)
 	{
 		double x;
 		if (point.x() < minX())
@@ -192,20 +227,13 @@ abstract class ARectangle implements IRectangle
 
 
 	@Override
-	public IVector2 nearestPointInside(final IVector2 point, final double margin)
-	{
-		return withMargin(margin).nearestPointInside(point);
-	}
-
-
-	@Override
 	public IVector2 nearestPointInside(IVector2 point, IVector2 pointToBuildLine)
 	{
 		if (isPointInShape(point))
 		{
 			return point;
 		}
-		return point.nearestToOpt(lineIntersections(Line.fromPoints(point, pointToBuildLine)))
+		return point.nearestToOpt(intersectPerimeterPath(Lines.lineFromPoints(point, pointToBuildLine)))
 				.orElse(point);
 	}
 
@@ -220,23 +248,7 @@ abstract class ARectangle implements IRectangle
 
 
 	@Override
-	public List<ILine> getEdges()
-	{
-		List<ILine> lines = new ArrayList<>(4);
-		List<IVector2> corners = getCorners();
-
-		for (int i = 0; i < 4; i++)
-		{
-			int j = (i + 1) % 4;
-			lines.add(Line.fromPoints(corners.get(i), corners.get(j)));
-		}
-
-		return lines;
-	}
-
-
-	@Override
-	public List<ILineSegment> getEdgesAsSegments()
+	public List<ILineSegment> getEdges()
 	{
 		List<ILineSegment> lines = new ArrayList<>(4);
 		List<IVector2> corners = getCorners();
@@ -252,52 +264,16 @@ abstract class ARectangle implements IRectangle
 
 
 	@Override
-	public List<IVector2> lineIntersections(final edu.tigers.sumatra.math.line.v2.ILine line)
+	public List<IBoundedPath> getPerimeterPath()
 	{
-		return getEdgesAsSegments().stream()
-				.map(edge -> edge.intersectLine(line))
-				.filter(Optional::isPresent)
-				.map(Optional::get)
-				.distinct()
-				.collect(Collectors.toList());
+		return getEdges().stream().map(IBoundedPath.class::cast).toList();
 	}
 
 
 	@Override
-	public List<IVector2> lineIntersections(final ILineSegment line)
+	public double getPerimeterLength()
 	{
-		return getEdgesAsSegments().stream()
-				.map(edge -> edge.intersectSegment(line))
-				.filter(Optional::isPresent)
-				.map(Optional::get)
-				.distinct()
-				.collect(Collectors.toList());
-	}
-
-
-	@Override
-	public List<IVector2> lineIntersections(final IHalfLine line)
-	{
-		return getEdgesAsSegments().stream()
-				.map(edge -> edge.intersectHalfLine(line))
-				.filter(Optional::isPresent)
-				.map(Optional::get)
-				.distinct()
-				.collect(Collectors.toList());
-	}
-
-
-	@Override
-	public List<IVector2> lineIntersections(final ILine line)
-	{
-		return lineIntersections(Lines.lineFromLegacyLine(line));
-	}
-
-
-	@Override
-	public boolean isIntersectingWithLine(final ILine line)
-	{
-		return !lineIntersections(line).isEmpty();
+		return 2 * yExtent() + 2 * xExtent();
 	}
 
 
