@@ -5,7 +5,8 @@ package edu.tigers.sumatra.vision.kick.estimators.straight;
 
 import edu.tigers.sumatra.cam.data.CamBall;
 import edu.tigers.sumatra.geometry.Geometry;
-import edu.tigers.sumatra.math.line.Line;
+import edu.tigers.sumatra.math.line.ILineSegment;
+import edu.tigers.sumatra.math.line.Lines;
 import edu.tigers.sumatra.math.vector.IVector2;
 import edu.tigers.sumatra.math.vector.IVector3;
 import edu.tigers.sumatra.math.vector.Vector2;
@@ -22,7 +23,6 @@ import org.apache.commons.math3.optim.nonlinear.scalar.noderiv.SimplexOptimizer;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 
 /**
@@ -30,11 +30,11 @@ import java.util.stream.Collectors;
  */
 public class StraightKickSolverNonLin3Direct implements IKickSolver
 {
-	private double[] initialGuess = new double[3];
 	private final SimplexOptimizer optimizer = new SimplexOptimizer(1e-3, 1e-3);
 	private final NelderMeadSimplex simplex = new NelderMeadSimplex(3, 10.0);
-	
-	
+	private double[] initialGuess = new double[3];
+
+
 	/**
 	 * @param kickPosition
 	 * @param kickVelocity
@@ -45,8 +45,8 @@ public class StraightKickSolverNonLin3Direct implements IKickSolver
 		initialGuess[1] = kickPosition.y();
 		initialGuess[2] = kickVelocity;
 	}
-	
-	
+
+
 	@Override
 	@SuppressWarnings("squid:S1166") // Exception from solver not logged
 	public Optional<KickSolverResult> solve(final List<CamBall> records)
@@ -55,9 +55,9 @@ public class StraightKickSolverNonLin3Direct implements IKickSolver
 
 		List<IVector2> groundPos = records.stream()
 				.map(CamBall::getFlatPos)
-				.collect(Collectors.toList());
+				.toList();
 
-		Optional<Line> kickLine = Line.fromPointsList(groundPos);
+		Optional<ILineSegment> kickLine = Lines.regressionLineFromPointsList(groundPos);
 		if (kickLine.isEmpty())
 		{
 			return Optional.empty();
@@ -74,14 +74,14 @@ public class StraightKickSolverNonLin3Direct implements IKickSolver
 					GoalType.MINIMIZE,
 					new InitialGuess(initialGuess),
 					simplex);
-			
+
 			result = optimum.getPoint();
 		} catch (IllegalStateException e)
 		{
 			// compute the current simplex center => best estimate
 			double[] sum = new double[] { 0, 0, 0 };
 			PointValuePair[] points = simplex.getPoints();
-			
+
 			for (PointValuePair pair : points)
 			{
 				for (int i = 0; i < 3; i++)
@@ -89,7 +89,7 @@ public class StraightKickSolverNonLin3Direct implements IKickSolver
 					sum[i] += pair.getPointRef()[i];
 				}
 			}
-			
+
 			for (int i = 0; i < 3; i++)
 			{
 				sum[i] /= points.length;
@@ -105,13 +105,14 @@ public class StraightKickSolverNonLin3Direct implements IKickSolver
 
 		return Optional.of(new KickSolverResult(kickPos, kickVel, tZero, getClass().getSimpleName()));
 	}
-	
+
+
 	private static class StraightBallModel implements MultivariateFunction
 	{
 		private final List<CamBall> records;
 		private final IVector2 kickDir;
-		
-		
+
+
 		/**
 		 * @param records
 		 * @param kickDir
@@ -121,8 +122,8 @@ public class StraightKickSolverNonLin3Direct implements IKickSolver
 			this.records = records;
 			this.kickDir = kickDir;
 		}
-		
-		
+
+
 		@Override
 		public double value(final double[] point)
 		{
@@ -142,7 +143,7 @@ public class StraightKickSolverNonLin3Direct implements IKickSolver
 			}
 
 			error /= records.size();
-			
+
 			return error;
 		}
 	}
